# tt-zork1

./: .gitignore  BLACKHOLE_DICTIONARY_DECODED.md  BREAKTHROUGH_JAN18_2026.md  BUGS_FOUND.md  BUILD_STATUS.md  CLAUDE.md  CMakeLists.txt  FIRST_BLACKHOLE_RUN.md  FIRST_ZORK_TEXT_ON_BLACKHOLE.md  HARDWARE_FAULT_REPORT.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  JOURNEY_MAPPING_SUMMARY.md  MILESTONE_FIRST_RISC-V_EXECUTION.md  MILESTONE_KERNEL_COMPILED.md  MILESTONE_ZMACHINE_EXECUTION.md  MILESTONE_ZMACHINE_HEADER_READ.md  QUICKSTART.md  QUICKSTART_MULTI_LLM.md  QUICK_START.md  README.md  SESSION_PROGRESS.md  SESSION_SUMMARY_JAN16-17.md  SESSION_SUMMARY_JAN18_2026_PART2.md  TESTING_STATUS.md  TROUBLESHOOTING.md  about.html  blog.html  debug-run.sh  demo-llm.sh  demo-map.sh  demo-tui.sh  index.html  play-zork-hardware.sh  play-zork-interactive.sh  play-zork-now.sh  play-zork-repl.sh  play-zork-with-llm.sh  play.py  run-zork-batches.sh  (+46 more)
config/: llm_mode.yaml  llm_mode.yaml.example  llm_mode_8b.yaml
demos/: README.md  advent.cast  demo-advent.sh  demo-ai.sh  demo-hhgg.sh  demo-hybrid.sh  demo-lgop.sh  demo-planetfall.sh  demo-stage1.sh  demo-stage2.sh  demo-stage3.sh  demo-stage4.sh  demo-zork2-ai.sh  demo-zork2-stage2.sh  hhgg.cast  hybrid.cast  lgop.cast  planetfall.cast  record-all.sh  stage1-hw.cast  stage1.cast  stage2-hw.cast  stage2.cast  stage3-hw.cast  stage3.cast  stage4.cast  zork2-stage2.cast
docs/: ASCII_ART_MODEL_ISSUE.md  A_B_TEST_IMPLEMENTATION.md  BATCH_LIMIT_INVESTIGATION.md  BLACKHOLE_RISCV.md  BREAKTHROUGH_DEVICE_PERSISTENCE.md  CHIP_DETECTION_AND_MULTI_LLM_ANALYSIS.md  CONTEXT_FREE_MODE.md  DEVICE_PERSISTENCE_SOLUTION.md  DIRECTORY_CLEANUP_PLAN.md  DOCUMENTATION_SUMMARY.md  FLEXIBLE_ARCHITECTURE.md  FOUR_LLM_DEPLOYMENT.md  IMPLEMENTATION_SUMMARY_2026-02-17.md  LLM_ROUTER_GUIDE.md  LLM_SUPPORT.md  LLM_USAGE.md  LORA_MERGING_GUIDE.md  MODEL_COMPARISON.md  MULTI_LLM_ARCHITECTURE.md  OLLAMA_INTEGRATION.md  PHASE_1_2_COMPLETE.md  PHASE_1_3_READY.md  PHASE_2_COMPLETE.md  PINNED_MEMORY_DISCOVERY.md  PINNED_MEMORY_SUCCESS.md  PLAYER_PERSONAS.md  PROMPT_ENGINEERING_GUIDE.md  PYTHON_APPROACH.md  PYTHON_BINDINGS_SETUP.md  PYTHON_TEST_RESULTS.md  QUICK_START.md  QUICK_START_AB_TEST.md  READ_OPCODE_IMPLEMENTATION.md  RISCV_SETUP.md  SESSION_SUMMARY.md  STATE_PERSISTENCE_INVESTIGATION.md  TUI_DISPLAY_FIXES.md  TUI_IMPLEMENTATION_OPTIONS.md  TUI_SPLIT_SCREEN.md  USER_GUIDE.md  (+4 more)
engines/: base.py  device.py  riscv.py  sim.py
game/: LICENSES.md  fetch-infocom.sh
kernels/: compute.cpp  hello_riscv.cpp  noop_riscv.cpp  reader.cpp  simple_test.cpp  test_addresses.cpp  test_decode_execute.cpp  test_defines.cpp  test_first_instruction.cpp  test_getarg.cpp  test_hello.cpp  test_minimal.cpp  test_noc_hello.cpp  test_noc_read.cpp  test_pinned_output.cpp  test_pinned_write.cpp  test_read_game.cpp  test_simple.cpp  test_simple_output.cpp  test_simple_state.cpp  test_zmachine_header.cpp  test_zstring_simple.cpp  writer.cpp  zork_debug_bytes.cpp  zork_decode_debug.cpp  zork_decode_objects.cpp  zork_decode_objects_simple.cpp  zork_decode_v2.cpp  zork_dict_debug.cpp  zork_dictionary.cpp  zork_execute.cpp  zork_execute_startup.cpp  zork_find_prints.cpp  zork_find_rooms.cpp  zork_find_title.cpp  zork_frotz_decode.cpp  zork_frotz_kernel.cpp  zork_frotz_real.cpp  zork_high_memory_scan.cpp  zork_interpreter.cpp  (+18 more)
models/: README.md
prompts/: README.md  ascii_system.txt  config.yaml  postcard_system.txt  remix_input_system.txt  remix_output_system.txt  system.txt  user_template.txt
python_bindings/: CMakeLists.txt  zork_bindings.cpp
remix/: ascii_artist.py  input_mapper.py  llm.py  mode.py  narrative_enhancer.py  output_remixer.py  personas.py  router.py
scripts/: build_blackhole_kernel.sh  build_local.sh  build_riscv.sh  check-server-health.sh  compare-prompts.sh  compare-setups.sh  deploy.sh  extract-command.sh  get-model-names.sh  merge_lora.py  quick-test-translator.sh  reorganize-docs-only.sh  reorganize-repo.sh  start-four-llms.sh  start-single-8b.sh  stop-four-llms.sh  stop-single-8b.sh  switch-mode.sh  test-four-llms.sh  test-llm-router.sh  test-prompt-variants.sh  (+3 more)
(+216 files in other folders)
